Make mobile view slightly less crappy

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
           <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center">
             <div id="board-div" class="mx-auto"></div>
           </div>
-          <div class="col-md-auto pb-3 pt-1">
+          <div class="col-md-auto pb-3 pt-1" id="events-area-div">
             <p class="h4 text-center font-weight-bold">Events</p>
             <select multiple class="form-control mx-auto" id="events-area"></select>
           </div>
@@ -127,7 +127,7 @@
             <h4 class="modal-title">Help</h4>
             <button type="button" class="close" data-dismiss="modal">&times;</button>
           </div>
-          <div class="modal-body scroll-div">
+          <div class="modal-body">
             <span class="font-weight-bold">What is this?</span>
             <p>
               This is an interactive and distributed painting application. Users can use
