Use a list rather than a select for the events area

--- a/index.html
+++ b/index.html
@@ -91,7 +91,8 @@
           </div>
           <div class="col-md-auto pb-3 pt-1" id="events-area-div">
             <p class="h4 text-center font-weight-bold">Events</p>
-            <select multiple class="form-control mx-auto" id="events-area"></select>
+            <ul class="list-group scroll-div-y mx-auto" id="events-area">
+            </ul>
           </div>
       </div>
     </div>
