--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </nav>
     <div class="container-fluid">
       <div class="row">
-        <nav class="d-none d-md-block bg-light sidebar">
+        <div class="d-none d-md-block col-md-auto bg-light sidebar">
           <div class="sidebar-sticky">
             <ul class="nav flex-column nav-align pt-0 mt-0">
               <li class="nav-item">
@@ -84,8 +84,8 @@
               </li>
             </ul>
           </div>
-        </nav>
-        <main role="main" class="col-md-9 ml-sm-auto col-lg-10 pt-3 expand-height" id="main-div">
+        </div>
+        <div class="col pt-3 mx-auto px-auto" id="main-div">
           <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center">
             <div id="board-div" class="mx-auto"></div>
           </div>
@@ -94,6 +94,7 @@
             <ul class="list-group scroll-div-y mx-auto" id="events-area">
             </ul>
           </div>
+        </div>
       </div>
     </div>
 
