Pixels. On the blockchain

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
       <div class="modal-dialog modal-lg">
         <div class="modal-content">
           <div class="modal-header">
-            <h4 class="modal-title">Help</h4>
+            <h4 class="modal-title">Stellar Pixels - Pixels. On the blockchain</h4>
             <button type="button" class="close" data-dismiss="modal">&times;</button>
           </div>
           <div class="modal-body">
